opam-version: "2.0"
maintainer: "TODO"
authors: "TODO"
homepage: "TODO"
bug-reports: "TODO"
synopsis: "TODO"
depends: [
  "ocaml" {= "4.07.0"}
  "dune" {>= "2.6"}
  "ocamlformat" {= "0.8"}
  "core_kernel" {= "v0.11.1"} 
  "menhir" {= "20181113"}
  "ppx_deriving" {= "4.2.1"}
  "fmt" {= "0.8.5"}
  "yojson" {= "1.7.0"}
  "ocp-indent"
  "patdiff"
]
build: [
  [
    "dune" "build" "-p" name "-j" jobs
    "@install"
  ]
]